tests/valid/metadata_minimal.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "MinimalMetadataExample"
  },

  "models": {
    "SimpleModel": {
      "reference": { "notes": "Minimal test model" },
      "variables": {
        "x": { "type": "state", "units": "dimensionless", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "-", "args": ["x"] }
        }
      ]
    }
  }
}