tests/invalid/unknown_variable_ref.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "InvalidVariableRef",
    "description": "Equation references undefined variable"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "m", "default": 0.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": ["undefined_var", 2.0] }
        }
      ]
    }
  }
}